--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,7 +15,7 @@
 
 .header__title {
   display: flex;
-  position: relative;
+  position: absolute;
   top: 202px;
   left: 80px;
   color: black;
@@ -25,10 +25,19 @@
 }
 
 .header__title_span-accent {
+  font-family: Noto Serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
 }
 
 .header__description {
   display: flex;
+  position: absolute;
+  top: 230px;
+  left: 80px;
   max-width: 683px;
 }
 
