--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,9 +1,8 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  position: relative;
-  left: 80px;
-  top: 23px;
+  margin-left: auto;
+  padding: 30px 80px 0 0;
 }
 
 .nav__links {
@@ -12,6 +11,7 @@
   justify-content: space-between;
   list-style: none;
   padding-left: 0;
+  gap: 20px;
 }
 
 .nav__link {
