--- a/blocks/header.css
+++ b/blocks/header.css
@@ -22,6 +22,11 @@
   max-width: 729px;
   flex-direction: column;
   margin: 0;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
 }
 
 .header__title_span-accent {
