--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,14 +1,13 @@
 .nav {
   display: flex;
-  justify-content: space-between;
-  margin-left: auto;
+  justify-content: flex-end;
   padding: 30px 80px 0 0;
+  block-size: auto;
 }
 
 .nav__links {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   list-style: none;
   padding-left: 0;
   gap: 20px;
