--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,8 +1,6 @@
 .menu {
-  background-color: #0a2750;
-  background-image: url("../images/background_menu.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: #0a2750 url("../images/background_menu.svg") no-repeat center /
+    cover;
 }
 
 .menu__title {
@@ -17,7 +15,7 @@
   justify-content: center;
   padding-bottom: 24px;
   padding-top: 100px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .menu__subtitle {
@@ -30,54 +28,14 @@
   color: rgb(254, 254, 254);
   margin: auto;
   text-align: center;
+  padding-bottom: 100px;
 }
 
 .menu__cards {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   flex-wrap: wrap;
-}
-
-.menu__card {
-  font-size: 20px;
-  line-height: 30px;
-  gap: 100px;
-  padding-bottom: 100px;
-  max-width: 600px;
-  flex-basis: 550px;
-}
-
-.card__title {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  color: rgb(254, 254, 254);
-  padding-bottom: 32px;
-}
-
-.card__list {
-  padding-left: 0;
-  list-style: none;
-  color: rgb(254, 254, 254);
-  max-width: 600px;
-  padding-right: 100px;
-  padding-bottom: 100px;
-}
-
-.card__list-item {
-  font-family: Noto Serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  color: rgb(254, 254, 254);
-  padding-bottom: 16px;
-}
-
-.card__list-divider {
-  border-bottom: 1px solid rgb(254, 254, 254);
-  margin: 0 1px 0 1px;
+  justify-content: space-around;
+  column-gap: 100px;
+  row-gap: 100px;
 }
