--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,18 +1,53 @@
+.form {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 120px;
+  align-items: center;
+}
+
 .form__fieldset {
   display: flex;
   flex-direction: column;
+  border: 0;
+  padding: 0;
 }
 
 .form__label {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  align-self: ;
 }
 
 .form__input {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+  margin-bottom: 32px;
 }
 
 .form__button {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  align-self: center;
+  width: 281px;
+  margin: 32px 0 32px 0;
+  border-radius: 4px;
+  transition: 0.7s;
+}
+
+.form__button:hover {
+  opacity: 70%;
 }
 
 .form__checkbox {
-  display: flex;
-  align-self: left;
+  border-radius: 2px;
 }
