--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,14 +4,17 @@
 }
 
 .reservation__title {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
   display: flex;
   justify-content: center;
   padding: 100px 0 80px 0;
 }
 
 .reservation__form {
-  display: flex;
-  justify-content: center;
-  flex-flow: column wrap;
-  width: 120px;
+  margin: 0 auto;
+  max-width: 385px;
 }
