--- a/blocks/form.css
+++ b/blocks/form.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding-bottom: 120px;
   align-items: center;
+  max-width: 385px;
 }
 
 .form__fieldset {
@@ -10,6 +11,8 @@
   flex-direction: column;
   border: 0;
   padding: 0;
+  /* max-width: 385px; */
+  width: 100%;
 }
 
 .form__label {
@@ -18,7 +21,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  align-self: ;
+  padding-bottom: 8px;
 }
 
 .form__input {
@@ -29,6 +32,10 @@
   line-height: 30px;
   color: #838383;
   margin-bottom: 32px;
+  height: 60px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding-left: 10px;
 }
 
 .form__button {
@@ -38,10 +45,14 @@
   font-size: 16px;
   line-height: 20px;
   align-self: center;
-  width: 281px;
+  width: 100%;
+  height: 60px;
   margin: 32px 0 32px 0;
   border-radius: 4px;
-  transition: 0.7s;
+  transition: 0.5s;
+  color: white;
+  background-color: #2f80ed;
+  border: none;
 }
 
 .form__button:hover {
@@ -49,5 +60,17 @@
 }
 
 .form__checkbox {
+  max-width: 20px;
+  height: 20px;
+  background-color: #2f80ed;
+  background-image: url(../images/check.svg);
   border-radius: 2px;
+  gap: 20px;
+  position: relative;
+  vertical-align: middle;
+}
+
+.form__tos {
+  display: flex;
+  flex-direction: row;
 }
