--- a/blocks/form.css
+++ b/blocks/form.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   padding-bottom: 120px;
   align-items: center;
-  max-width: 385px;
 }
 
 .form__fieldset {
@@ -11,7 +10,6 @@
   flex-direction: column;
   border: 0;
   padding: 0;
-  /* max-width: 385px; */
   width: 100%;
 }
 
@@ -60,17 +58,12 @@
 }
 
 .form__checkbox {
-  max-width: 20px;
+  width: 20px;
   height: 20px;
   background-color: #2f80ed;
   background-image: url(../images/check.svg);
   border-radius: 2px;
-  gap: 20px;
   position: relative;
   vertical-align: middle;
-}
-
-.form__tos {
-  display: flex;
-  flex-direction: row;
+  margin-right: 12px;
 }
