--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,2 +1,60 @@
 .footer {
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  display: flex;
+  padding: 60px 100px 0 80px;
+  color: #fff;
+  flex-direction: column;
+}
+
+.footer__content {
+  padding: 60px 100px 108px 80px;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__logo {
+  width: 166px;
+  height: 21px;
+  margin: 0;
+}
+
+.footer__social-heading {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0 0 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  padding-bottom: 20px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer__list-item {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 16px;
+}
+
+.footer__social-icon {
+  padding-right: 10px;
+}
+
+.footer__social-link {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer__social-link:hover {
+}
+
+.footer__copyright {
+  padding: 0 0 60px 80px;
 }
