--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,7 +14,7 @@
 }
 
 .card__list {
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
