--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -19,7 +19,7 @@
 .recipes__subtitle {
   max-width: 438px;
   padding: 0px 0px 80px 80px;
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
