Code Review pending

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -70,7 +70,7 @@
   box-sizing: border-box;
 }
 
-.header__paragraph_wrapper_footer {
+.header__hours {
   position: relative;
   left: 80px;
   padding-left: 80px;
