--- a/blocks/card.css
+++ b/blocks/card.css
@@ -9,8 +9,9 @@
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
-  color: rgb(254, 254, 254);
+  color: #fff;
   padding-bottom: 32px;
+  margin: 0;
 }
 
 .card__list {
@@ -21,8 +22,9 @@
   line-height: 20px;
   padding-left: 0;
   list-style: none;
-  color: rgb(254, 254, 254);
+  color: #fff;
   max-width: 600px;
+  margin: 0;
 }
 
 .card__list-item {
@@ -33,7 +35,7 @@
 }
 
 .card__list-divider {
-  flex-grow: calc(1);
-  border-bottom: 1px solid rgb(254, 254, 254);
+  flex-grow: 1;
+  border-bottom: 1px solid #fff;
   margin: 0 5px;
 }
