--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,20 +2,18 @@
   background-image: url("../images/background_header.svg");
   background-color: #ffffff;
   background-size: cover;
-  background-repeat: none;
+  background-repeat: no-repeat;
   background-position: center;
   height: 100vh;
   min-height: 720px;
   max-height: 800px;
   position: relative;
   z-index: 1;
-  padding-right: px;
+  padding-right: 80px;
 }
 
 .header__title {
   display: flex;
-  top: 202px;
-  left: 80px;
   color: black;
   max-width: 729px;
   margin: 202px 0 0 80px;
@@ -28,7 +26,7 @@
 }
 
 .header__span-accent {
-  font-family: Noto serif, "Times New Roman", serif;
+  font-family: "Noto serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -42,13 +40,14 @@
   z-index: 1;
   flex-direction: row;
   align-self: center;
-  left: 80px;
+  padding-left: 80px;
   max-width: 683px;
-  font-family: Noto serif;
+  font-family: "Noto serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  margin: 0;
 }
 
 .header__image {
@@ -77,7 +76,7 @@
 }
 
 .header__paragraph {
-  color: rgb(64, 64, 64);
+  color: #6f6f6f;
   font-family: "Inter";
   font-style: normal;
   align-self: flex-end;
