--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -25,7 +25,7 @@
   font-size: 20px;
   line-height: 30px;
   max-width: 780px;
-  color: rgb(254, 254, 254);
+  color: #fff;
   margin: auto;
   text-align: center;
   padding-bottom: 100px;
