--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -10,10 +10,17 @@
   list-style: none;
   padding-left: 0;
   gap: 20px;
+  margin: 0;
 }
 
 .nav__link {
   text-decoration: none;
   color: black;
-  font-weight: bold;
+  font-weight: 700;
+  transition: 0.5s;
+}
+
+.nav__link:hover {
+  color: #c1c1c1;
+  animation-duration: 0.3s;
 }
