--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,5 @@
+@import url(../vendor/normalize.css);
+
 @import url("../blocks/header.css");
 
 @import url("../blocks/footer.css");
@@ -19,7 +21,3 @@
 @import url("../blocks/recipes.css");
 
 @import url("../blocks/reservation.css");
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"); /*Inter*/
-
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap"); /*Noto Serif*/
