--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -6,7 +6,7 @@
 }
 
 .recipes__title {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -19,7 +19,7 @@
 .recipes__subtitle {
   max-width: 438px;
   padding: 0px 0px 80px 80px;
-  font-family: Noto serif;
+  font-family: "Noto serif", "Times New Roman", serif;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
@@ -41,7 +41,7 @@
 }
 
 .recipes__video-caption {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
