--- a/blocks/form.css
+++ b/blocks/form.css
@@ -40,6 +40,10 @@
   padding-left: 10px;
 }
 
+.form__input:last-child {
+  margin-bottom: 0px;
+}
+
 .form__button {
   font-family: Inter;
   font-style: normal;
