--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,11 +1,12 @@
 .menu {
   background: #0a2750 url("../images/background_menu.svg") no-repeat center /
     cover;
+  padding-bottom: 100px;
 }
 
 .menu__title {
   display: flex;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -19,7 +20,7 @@
 }
 
 .menu__subtitle {
-  font-family: Noto serif;
+  font-family: "Noto serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -36,6 +37,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  column-gap: 100px;
   row-gap: 100px;
+  column-gap: 100px;
+  margin: 0 100px 100px 100px;
 }
