--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -27,11 +27,13 @@
 }
 
 .recipes__videos {
+  list-style: none;
   display: flex;
   justify-content: center;
   flex-direction: row;
   column-gap: 40px;
   padding-bottom: 217px;
+  padding-left: 0;
 }
 
 .recipes__iframe {
