--- a/blocks/card.css
+++ b/blocks/card.css
@@ -34,6 +34,10 @@
   margin: 0;
 }
 
+.card__list-item:last-child {
+  padding-bottom: 0;
+}
+
 .card__list-divider {
   flex-grow: 1;
   border-bottom: 1px solid #fff;
