--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   justify-content: flex-end;
-  padding: 30px 80px 0 0;
+  padding-top: 30px;
 }
 
 .nav__links {
@@ -21,6 +21,6 @@
 }
 
 .nav__link:hover {
-  color: #c1c1c1;
+  color: #2f80ed;
   animation-duration: 0.3s;
 }
