--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  padding: 60px 100px 60px 80px;
+  padding: 60px 100px 0 80px;
   color: #fff;
   box-sizing: border-box;
 }
