--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,12 +1,11 @@
 .menu {
   background: #0a2750 url("../images/background_menu.svg") no-repeat center /
     cover;
-  padding-bottom: 100px;
 }
 
 .menu__title {
   display: flex;
-  font-family: Inter, Arial, sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -29,15 +28,13 @@
   color: #fff;
   margin: auto;
   text-align: center;
-  padding-bottom: 100px;
 }
 
 .menu__cards {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  row-gap: 100px;
-  column-gap: 100px;
-  margin: 0 100px 100px 100px;
+  justify-content: center;
+  gap: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
