--- a/blocks/header.css
+++ b/blocks/header.css
@@ -70,10 +70,13 @@
   bottom: 40px;
   width: 100%;
   box-sizing: border-box;
+  padding: 0 80px 0 80px;
 }
 
 .header__hours {
-  padding-left: 80px;
+}
+
+.header__address {
 }
 
 .header__paragraph {
